# GraspGen

./: README.md
realsense-ros/realsense2_camera/: CMakeLists.txt
tensorrtx_yolov8_ros/: CMakeLists.txt  README.md  package.xml
tensorrtx_yolov8_ros/include/: AABBGraspPlanner.hpp
tensorrtx_yolov8_ros/launch/: yolov8.launch
tensorrtx_yolov8_ros/scripts/: arm_action.py  item_confer.py
tensorrtx_yolov8_ros/src/: yolov8_seg.cpp
